Sat May 31 09:13:07 2003  Matt Rice <ratmice@yahoo.com>, 
	                  David Ayers <d.ayers@inode.at>

	* Instance/gswapp.make (internal-gswapp-install_): Fixed typo:
	removed excess bracket.

Fri May 30 23:28:55 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* common.make (OBJC_FLAGS): Added -fno-strict-aliasing.

2003-05-29  Adam Fedor  <fedor@gnu.org>

	* target.make (TARGET_SYSTEM_LIBS): Remove -ldl (added when necessary
	by gnustep-base).

Wed May 28 09:47:42 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/framework.make: Use test -r instead of test -f to check
	that a file, which might be a symlink, exists.
	* Instance/framework.make (internal-framework-install_): Always remove
	the old symlinks without checking.

Tue May 27 16:52:27 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/Documentation/javadoc.make (internal-doc-install_): Fixed line breaking
	typo.

Tue May 27 13:21:57 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/objc.make: Remove old deprecation warning.
	* Instance/tool.make: The same.
	
Tue May 27 13:12:59 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/application.make: Use ECHO_NOTHING in commands which
	were using @ or printing the command.
	* Instance/documentation.make: The same.
	* Instance/framework.make: The same.
	* Instance/gswapp.make: The same.
	* Instance/java-tool.make: The same.
	* Instance/library.make: The same.
	* Instance/palette.make: The same.	
	* Instance/resource-set.make: The same.
	* Instance/service.make: The same.
	* Instance/subproject.make: The same.	
	* Instance/Documentation/autogsdoc.make: The same.
	* Instance/Documentation/gsdoc.make: The same.
	* Instance/Documentation/javadoc.make: The same.
	* Instance/Documentation/latex.make: The same.
	* Instance/Documentation/texi.make: The same.	
	* Instance/Shared/java.make: The same.
	
	* Instance/ctool.make (internal-ctool-uninstall_): Use ECHO_UNINSTALLING.
	* Instance/document.make (internal-textdoc-uninstall_): The same.