@@ -135,8 +135,10 @@ install: all
 		$(makedir)/Instance \
 		$(makedir)/Instance/Shared \
 		$(makedir)/Instance/Documentation)
-	-$(EC) (rm -f $(GNUSTEP_SYSTEM_ROOT)/Makefiles; \
-	   $(LN_S)  @MAKEFILES_SUFFIX@ $(GNUSTEP_SYSTEM_ROOT)/Makefiles)
+	-$(EC) rm -f $(GNUSTEP_SYSTEM_ROOT)/Makefiles
+ifeq ($(HAS_LN_S), yes)
+	$(EC) (cd $(GNUSTEP_SYSTEM_ROOT); $(LN_S) @MAKEFILES_SUFFIX@ Makefiles)
+endif
 	 $(EC)(echo "Installing gnustep-make support software"; \
 	   $(INSTALL_PROGRAM) -m 755 which_lib$(EXEEXT) \
 	     $(makedir)/$(GNUSTEP_TARGET_DIR); \
